feat: Implement API server and enhance cloud sync
Introduces a dedicated API server using Express, replacing the previous Vite development server setup. This change also adds an auto-sync feature to the cloud service, allowing for background synchronization of data. The `types.ts` file has been updated to remove an unused enum value. Additionally, the `index.html` file now includes a custom CSS animation for spinning elements.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
       body {
         overscroll-behavior-y: none;
       }
+      @keyframes spin-slow {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
+      }
+      .animate-spin-slow {
+        animation: spin-slow 3s linear infinite;
+      }
     </style>
   <script type="importmap">
 {
